	Wrote method.
	(PokerInteractorsTests.test04_interactorDisplayKnownGameChangedState):
	Wrote method.
	(PokerInteractorsTests.test05_interactorsSyncDisplay_NoFactoryDisplay):
	Wrote method.
	(PokerInteractorsTests.MockPokerFactory.__init__): added
	self.display initialization.
	(PokerInteractorsTests.tearDown): Wrote method.
	(PokerInteractorsTests.setUp): Added override of PokerInteractor.

	* tests/testmessages.py: Added PokerInteractors to list of classes.

	* pokerui/pokerrenderer.py (PokerInteractors.error): Added method.
	(PokerInteractors.message): Added method.

	* tests/test-pokerrenderer.py.in (PokerInteractorsTests): Created
	test suite.
	(PokerInteractorsTests.MockPokerFactory): Created new mock up class.
	(PokerInteractorsTests.MockPokerRenderer): Created new mock up class.
	(PokerInteractorsTests.MockPokerProtocol): Created new mock up class.

	* pokerui/pokerrenderer.py (PokerInteractors._handleConnection):
	Added else with an error message when packet is not one that is handled.

	* tests/run.in (COVERAGE_100_PERCENT): Added pokeravatar

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.variousStartPackets): Adjusted now that bug
	in pokeravatar.handlePacketLogic() on PACKET_POKER_START actions fixed.
	(PokerAvatarTestCase.requestsWithWrongSerial): Adjusted now that bug
	in pokeravatar.handlePacketLogic() on PACKET_POKER_START actions fixed.
	(PokerAvatarTestCase): Rewrote tests to again change full coverage.

2008-07-05  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerrenderer.py.in (PokerFactoryMockup.getMessages):
	Wrote method.
	(PokerFactoryMockup.message): Wrote method.
	(PokerFactoryMockup.clearMessages): Wrote method.
	(PokerFactoryMockup.__init__): Added call to clearMessages();
	Increased verbosity.

	* tests/test-pokerinteractor.py.in
	(PokerInteractorTestCase.test_highestBetIncreaseCancelCall): Added
	checks for output.
	(PokerFactoryMockup.getMessages): Wrote method.
	(PokerFactoryMockup.message): Wrote method.